--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -33,6 +33,7 @@ usb-device           = { version = "0.2.9", optional = true }
 embedded-hal-async = { version = "0.2.0-alpha.0", optional = true }
 embassy-sync       = { version = "0.1.0", optional = true }
 embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
+embassy-futures    = { version = "0.1.0", optional = true }
 
 # RISC-V
 esp-riscv-rt                = { version = "0.1.0", optional = true }
@@ -81,7 +82,7 @@ ufmt = ["ufmt-write"]
 vectored = ["procmacros/interrupt"]
 
 # Implement the `embedded-hal-async==1.0.0-alpha.x` traits
-async   = ["embedded-hal-async", "eh1", "embassy-sync"]
+async   = ["embedded-hal-async", "eh1", "embassy-sync", "embassy-futures"]
 embassy = ["embassy-time"]
 
 embassy-time-systick = []
