--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -32,6 +32,7 @@ heapless = { version = "0.7.14", default-features = false }
 num-derive = { version = "0.3", features = ["full-syntax"] }
 num-traits = { version = "0.2", default-features = false }
 esp-wifi-sys = { version = "0.1.0", path = "../esp-wifi-sys" }
+embassy-sync = { version = "0.1.0", optional = true }
 
 [build-dependencies]
 riscv-target = { version = "0.1.2", optional = true }
@@ -39,6 +40,10 @@ riscv-target = { version = "0.1.2", optional = true }
 [dev-dependencies]
 bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "5ce5ca139fe85c0120e9c2f9607d165d1c32d725" }
 bleps-macros = { git = "https://github.com/bjoernQ/bleps", package = "bleps-macros", rev = "5ce5ca139fe85c0120e9c2f9607d165d1c32d725" }
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
+embassy-time = { version = "0.1.0", features = ["nightly"] }
+embassy-futures = "0.1.0"
+futures-util = { version = "0.3.17", default-features = false }
 
 [target.xtensa-esp32-none-elf.dev-dependencies]
 esp-println = { version = "0.3.1", features = [ "esp32", "log" ] }
@@ -65,6 +70,11 @@ esp32c2 = [ "riscv-target", "riscv", "riscv-rt", "esp32c2-hal", "dep:esp32c2", "
 esp32 = [ "esp32-hal", "xtensa-lx-rt/esp32", "xtensa-lx/esp32", "esp-wifi-sys/esp32" ]
 esp32s3 = [ "esp32s3-hal", "xtensa-lx-rt/esp32s3", "xtensa-lx/esp32s3", "esp-wifi-sys/esp32s3" ]
 esp32s2 = [ "esp32s2-hal", "xtensa-lx-rt/esp32s2", "xtensa-lx/esp32s2", "esp-wifi-sys/esp32s2" ]
+esp32c3-async = [ "esp32c3-hal/embassy", "esp32c3-hal/embassy-time-timg0", "async" ]
+esp32c2-async = [ "esp32c2-hal/embassy", "esp32c2-hal/embassy-time-timg0", "async" ]
+esp32-async = [ "esp32-hal/embassy", "esp32-hal/embassy-time-timg0", "async" ]
+esp32s2-async = [ "esp32s2-hal/embassy", "esp32s2-hal/embassy-time-timg0", "async" ]
+esp32s3-async = [ "esp32s3-hal/embassy", "esp32s3-hal/embassy-time-timg0", "async" ]
 wifi_logs = []
 dump_packets = []
 utils = []
@@ -74,3 +84,5 @@ wifi = []
 ble = [ "esp32-hal?/bluetooth" ]
 phy_enable_usb = []
 ps_min_modem = []
+esp_now = [ "wifi", "embedded-svc" ]
+async = [ "dep:embassy-sync"]
