--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -77,3 +77,7 @@ required-features = ["embassy"]
 [[example]]
 name              = "embassy_wait"
 required-features = ["embassy", "async"]
+
+[[example]]
+name              = "embassy_spi"
+required-features = ["embassy", "async"]
