--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 edition      = "2021"
 rust-version = "1.60.0"
-description  = "HAL for ESP32-C3 microcontrollers"
+description  = "HAL for ESP32-C6 microcontrollers"
 repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
@@ -51,34 +51,29 @@ static_cell       = "1.0.0"
 
 [features]
 default              = ["rt", "vectored"]
-mcu-boot             = []
 direct-boot          = []
 eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb", "dep:embedded-can"]
 rt                   = ["esp-riscv-rt"]
 smartled             = ["esp-hal-common/smartled"]
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
-allow-opt-level-z    = []
 async                = ["esp-hal-common/async", "embedded-hal-async"]
 embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 
-# [[example]]
-# name              = "hello_rgb"
-# required-features = ["smartled"]
+[[example]]
+name              = "hello_rgb"
+required-features = ["smartled"]
 
-# [[example]]
-# name              = "spi_eh1_loopback"
-# required-features = ["eh1"]
+[[example]]
+name              = "spi_eh1_loopback"
+required-features = ["eh1"]
 
-# [[example]]
-# name              = "spi_eh1_device_loopback"
-# required-features = ["eh1"]
+[[example]]
+name              = "spi_eh1_device_loopback"
+required-features = ["eh1"]
 
 # [[example]]
 # name              = "embassy_hello_world"
 # required-features = ["embassy"]
-
-[profile.dev]
-opt-level = 1
