--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -33,6 +33,7 @@ num-derive = { version = "0.3", features = ["full-syntax"] }
 num-traits = { version = "0.2", default-features = false }
 esp-wifi-sys = { version = "0.1.0", path = "../esp-wifi-sys" }
 embassy-sync = { version = "0.1.0", optional = true }
+embassy-futures = { version = "0.1.0", optional = true }
 embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"], optional = true }
 embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", optional = true }
 
@@ -81,7 +82,7 @@ esp32c2-async = [ "esp32c2-hal/embassy", "esp32c2-hal/embassy-time-timg0", "asyn
 esp32-async = [ "esp32-hal/embassy", "esp32-hal/embassy-time-timg0", "async" ]
 esp32s2-async = [ "esp32s2-hal/embassy", "esp32s2-hal/embassy-time-timg0", "async" ]
 esp32s3-async = [ "esp32s3-hal/embassy", "esp32s3-hal/embassy-time-timg0", "async" ]
-async = [ "dep:embassy-sync", "embedded-io/async"]
+async = [ "dep:embassy-sync", "dep:embassy-futures", "embedded-io/async"]
 embassy-net = ["dep:embassy-net", "dep:embassy-net-driver", "async"]
 
 # misc features
