--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -45,7 +45,7 @@ static_cell       = "1.0.0"
 aes = "0.8.2"
 
 [features]
-default           = ["rt", "vectored"]
+default           = ["rt", "vectored", "xtal40mhz"]
 bluetooth         = []
 eh1               = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
 rt                = []
@@ -55,6 +55,8 @@ vectored          = ["esp-hal-common/vectored"]
 async             = ["esp-hal-common/async", "embedded-hal-async"]
 embassy           = ["esp-hal-common/embassy"]
 embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
+xtal40mhz         = ["esp-hal-common/esp32_40mhz"]
+xtal26mhz         = ["esp-hal-common/esp32_26mhz"]
 
 [[example]]
 name              = "hello_rgb"
