--- a/esp-wifi/.cargo/config.toml
+++ b/esp-wifi/.cargo/config.toml
@@ -26,6 +26,9 @@ rustflags = [
 
     "-C", "link-arg=-Tlinkall.x",
     "-C", "link-arg=-Trom_functions.x",
+
+    # for now disable loop optimization
+    "-C", "target-feature=-loop",
 ]
 
 [target.xtensa-esp32s2-none-elf]
