--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -8,17 +8,13 @@ license = "MIT OR Apache-2.0"
 embedded-hal = "0.2.3"
 nb = "1.0.0"
 void = { version = "1.0.2", default-features = false }
-esp32c3-hal = { version = "0.5.0", optional = true }
-esp32c2-hal = { version = "0.3.0", optional = true }
-esp32-hal = { version = "0.8.0", optional = true, features = [ "rt" ] }
-esp32s3-hal = { version = "0.5.0", optional = true, features = [ "rt" ] }
-esp32s2-hal = { version = "0.5.0", optional = true, features = [ "rt" ] }
-esp32c3 = { version = "0.9.1",  features = ["critical-section"], optional = true }
-esp32c2 = { version = "0.6.1",  features = ["critical-section"], optional = true }
-riscv-rt = { version = "0.11.0", optional = true }
-riscv = { version = "0.10.1", optional = true }
-xtensa-lx-rt = { version = "0.14.0", optional = true }
-xtensa-lx = { version = "0.7.0", optional = true }
+esp32c3-hal = { version = "0.7.0", optional = true }
+esp32c2-hal = { version = "0.5.1", optional = true }
+esp32-hal = { version = "0.10.0", optional = true, features = [ "rt" ] }
+esp32s3-hal = { version = "0.7.0", optional = true, features = [ "rt" ] }
+esp32s2-hal = { version = "0.7.0", optional = true, features = [ "rt" ] }
+esp32c3 = { version = "0.11.0",  features = ["critical-section"], optional = true }
+esp32c2 = { version = "0.8.0",  features = ["critical-section"], optional = true }
 smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
 critical-section = "1.1.1"
 atomic-polyfill = "1.0.1"
@@ -50,31 +46,30 @@ futures-util = { version = "0.3.17", default-features = false }
 
 [target.xtensa-esp32-none-elf.dev-dependencies]
 esp-println = { version = "0.3.1", features = [ "esp32", "log" ] }
-esp-backtrace = { version = "0.4.0", features = [ "esp32", "panic-handler", "exception-handler", "print-uart" ] }
+esp-backtrace = { version = "0.5.0", features = [ "esp32", "panic-handler", "exception-handler", "print-uart" ] }
 
 # change this for ESP32C3 / ESP32C2
 [target.riscv32imc-unknown-none-elf.dev-dependencies]
 esp-println = { version = "0.3.1", features = [ "esp32c3", "log" ] }
-esp-backtrace = { version = "0.4.0", features = [ "esp32c3", "panic-handler", "exception-handler", "print-uart" ] }
+esp-backtrace = { version = "0.5.0", features = [ "esp32c3", "panic-handler", "exception-handler", "print-uart" ] }
 
 [target.xtensa-esp32s3-none-elf.dev-dependencies]
 esp-println = { version = "0.3.1", features = [ "esp32s3", "log" ] }
-esp-backtrace = { version = "0.4.0", features = [ "esp32s3", "panic-handler", "exception-handler", "print-uart" ] }
+esp-backtrace = { version = "0.5.0", features = [ "esp32s3", "panic-handler", "exception-handler", "print-uart" ] }
 
 [target.xtensa-esp32s2-none-elf.dev-dependencies]
 esp-println = { version = "0.3.1", features = [ "esp32s2", "log", "critical-section" ] }
-esp-backtrace = { version = "0.4.0", features = [ "esp32s2", "panic-handler", "exception-handler", "print-uart" ] }
-xtensa-atomic-emulation-trap = "0.3.0"
+esp-backtrace = { version = "0.5.0", features = [ "esp32s2", "panic-handler", "exception-handler", "print-uart" ] }
 
 [features]
 default = [ "utils" ]
 
 # chip features
-esp32c3 = [ "riscv-target", "riscv", "riscv-rt", "esp32c3-hal", "dep:esp32c3", "esp-wifi-sys/esp32c3" ]
-esp32c2 = [ "riscv-target", "riscv", "riscv-rt", "esp32c2-hal", "dep:esp32c2", "esp-wifi-sys/esp32c2" ]
-esp32 = [ "esp32-hal", "xtensa-lx-rt/esp32", "xtensa-lx/esp32", "esp-wifi-sys/esp32" ]
-esp32s3 = [ "esp32s3-hal", "xtensa-lx-rt/esp32s3", "xtensa-lx/esp32s3", "esp-wifi-sys/esp32s3" ]
-esp32s2 = [ "esp32s2-hal", "xtensa-lx-rt/esp32s2", "xtensa-lx/esp32s2", "esp-wifi-sys/esp32s2" ]
+esp32c3 = [ "riscv-target", "esp32c3-hal", "dep:esp32c3", "esp-wifi-sys/esp32c3" ]
+esp32c2 = [ "riscv-target", "esp32c2-hal", "dep:esp32c2", "esp-wifi-sys/esp32c2" ]
+esp32 = [ "esp32-hal",  "esp-wifi-sys/esp32" ]
+esp32s3 = [ "esp32s3-hal", "esp-wifi-sys/esp32s3" ]
+esp32s2 = [ "esp32s2-hal", "esp-wifi-sys/esp32s2" ]
 
 # async features
 esp32c3-async = [ "esp32c3-hal/embassy", "esp32c3-hal/embassy-time-timg0", "async" ]
