--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,15 +108,48 @@ jobs:
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32c3-hal (common features)
-        run: cargo check --manifest-path=esp32c3-hal/Cargo.toml --target=riscv32imc-unknown-none-elf --examples --features=eh1,smartled,ufmt
+        run: cd esp32c3-hal/ && cargo check --examples --features=eh1,smartled,ufmt
       - name: check esp32c3-hal (async, systick)
-        run: cargo check --manifest-path=esp32c3-hal/Cargo.toml --target=riscv32imc-unknown-none-elf --example=embassy_hello_world --features=embassy,embassy-time-systick
+        run: cd esp32c3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c3-hal (async, timg0)
-        run: cargo check --manifest-path=esp32c3-hal/Cargo.toml --target=riscv32imc-unknown-none-elf --example=embassy_hello_world --features=embassy,embassy-time-timg0
+        run: cd esp32c3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0
       - name: check esp32c3-hal (async, gpio)
         run: cd esp32c3-hal/ && cargo check --example=embassy_wait --features=embassy,embassy-time-systick,async
       - name: check esp32c3-hal (async, spi)
         run: cd esp32c3-hal/ && cargo check --example=embassy_spi --features=embassy,embassy-time-systick,async
+
+  esp32c6-hal:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@v1
+        with:
+          target: riscv32imac-unknown-none-elf
+          toolchain: nightly
+          components: rust-src
+      - uses: Swatinem/rust-cache@v2
+
+      # Perform a full build initially to verify that the examples not only
+      # build, but also link successfully.
+      # We also use this as an opportunity to verify that the examples link
+      # for each supported image format.
+      - name: build esp32c6-hal (no features)
+        run: cd esp32c6-hal/ && cargo build --examples
+      - name: build esp32c6-hal (direct-boot)
+        run: cd esp32c6-hal/ && cargo build --examples --features=direct-boot
+      # Subsequent steps can just check the examples instead, as we're already
+      # confident that they link.
+      - name: check esp32c6-hal (common features)
+        run: cd esp32c6-hal/ && cargo check --examples --features=eh1,smartled,ufmt
+      - name: check esp32c6-hal (async, systick)
+        run: cd esp32c6-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
+      - name: check esp32c6-hal (async, timg0)
+        run: cd esp32c6-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0
+      - name: check esp32c6-hal (async, gpio)
+        run: cd esp32c6-hal/ && cargo check --example=embassy_wait --features=embassy,embassy-time-systick,async
+      - name: check esp32c6-hal (async, spi)
+        run: cd esp32c6-hal/ && cargo check --example=embassy_spi --features=embassy,embassy-time-systick,async
 
   esp32s2-hal:
     runs-on: ubuntu-latest
@@ -190,7 +223,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@v1
         with:
-          target: riscv32imc-unknown-none-elf
+          target: riscv32imc-unknown-none-elf, riscv32imac-unknown-none-elf
           toolchain: "1.65.0"
       - uses: Swatinem/rust-cache@v2
 
@@ -199,6 +232,8 @@ jobs:
         run: cd esp32c2-hal/ && cargo check --features=eh1,ufmt
       - name: msrv (esp32c3-hal)
         run: cd esp32c3-hal/ && cargo check --features=eh1,ufmt,smartled
+      - name: msrv (esp32c6-hal)
+        run: cd esp32c6-hal/ && cargo check --features=eh1,ufmt,smartled
 
   msrv-xtensa:
     runs-on: ubuntu-latest
@@ -238,6 +273,8 @@ jobs:
         run: cargo +stable clippy --manifest-path=esp32c2-hal/Cargo.toml -- --no-deps
       - name: clippy (esp32c3-hal)
         run: cargo +stable clippy --manifest-path=esp32c3-hal/Cargo.toml -- --no-deps
+      - name: clippy (esp32c6-hal)
+        run: cargo +stable clippy --manifest-path=esp32c6-hal/Cargo.toml -- --no-deps
 
   clippy-xtensa:
     runs-on: ubuntu-latest
@@ -286,6 +323,8 @@ jobs:
         run: cargo fmt --all --manifest-path=esp32c2-hal/Cargo.toml -- --check
       - name: rustfmt (esp32c3-hal)
         run: cargo fmt --all --manifest-path=esp32c3-hal/Cargo.toml -- --check
+      - name: rustfmt (esp32c6-hal)
+        run: cargo fmt --all --manifest-path=esp32c6-hal/Cargo.toml -- --check
       - name: rustfmt (esp32s2-hal)
         run: cargo fmt --all --manifest-path=esp32s2-hal/Cargo.toml -- --check
       - name: rustfmt (esp32s3-hal)
