--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -51,18 +51,19 @@ ufmt-write = { version = "0.1.0", optional = true }
 
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
-# corresponding feature. We rename the PAC packages because we cannot
-# have dependencies and features with the same names.
+# corresponding feature.
 esp32   = { version = "0.21.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.8.0",  features = ["critical-section"], optional = true }
 esp32c3 = { version = "0.11.0", features = ["critical-section"], optional = true }
+esp32c6 = { version = "0.1.0",  features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.12.0", features = ["critical-section"], optional = true }
 esp32s3 = { version = "0.15.0", features = ["critical-section"], optional = true }
 
 [features]
 esp32   = ["esp32/rt"  , "xtensa", "xtensa-lx/esp32",   "xtensa-lx-rt/esp32",   "lock_api", "procmacros/esp32"]
-esp32c2 = ["esp32c2/rt", "riscv", "procmacros/esp32c2"]
-esp32c3 = ["esp32c3/rt", "riscv", "procmacros/esp32c3"]
+esp32c2 = ["esp32c2/rt", "riscv",  "procmacros/esp32c2"]
+esp32c3 = ["esp32c3/rt", "riscv",  "procmacros/esp32c3"]
+esp32c6 = ["esp32c6/rt", "riscv",  "procmacros/esp32c6"]
 esp32s2 = ["esp32s2/rt", "xtensa", "xtensa-lx/esp32s2", "xtensa-lx-rt/esp32s2",             "esp-synopsys-usb-otg", "usb-device", "procmacros/esp32s2"]
 esp32s3 = ["esp32s3/rt", "xtensa", "xtensa-lx/esp32s3", "xtensa-lx-rt/esp32s3", "lock_api", "esp-synopsys-usb-otg", "usb-device", "procmacros/esp32s3"]
 
