--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -41,7 +41,7 @@ aes               = "0.8.2"
 critical-section  = "1.1.1"
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
-esp-backtrace     = { git = "https://github.com/jessebraham/esp-backtrace", branch = "feature/chip-support", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
+esp-backtrace     = { version = "0.6.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
 esp-println       = { version = "0.4.0", features = ["esp32c6"] }
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
